@@ -94,7 +94,7 @@ void FormManager::processFormOption(MenuOption &option, std::string value)
  * @brief Pulls Generated Menu Options from Form
  * @param option
  */
-menu_ptr FormManager::retrieveFormOptions(int page)
+menu_ptr FormManager::retrieveFormOptions(int ) //page)
 {
     // Setup the Default Menu, and pull in Form Generated Options.
     m_menu_info->menu_name = m_form.back()->m_name;
